--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "16.12.0",
     "react-lorem-ipsum": "1.4.4",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
