--- a/package.json
+++ b/package.json
@@ -1,47 +1,35 @@
 {
-  "name": "taqneeqwebsite",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@iconify/icons-mdi": "^1.2.39",
-    "@iconify/react": "^4.0.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "google-map-react": "^2.2.0",
-    "gsap": "^3.11.4",
-    "iconify": "^1.4.0",
-    "lottie-react": "^2.3.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+    "name": "framer-motion-animatesharedlayout-app-store-demo",
+    "version": "1.0.0",
+    "description": "",
+    "keywords": [],
+    "main": "src/index.js",
+    "dependencies": {
+        "aos": "^2.3.4",
+        "bootstrap": "^5.2.3",
+        "framer-motion": "2.0.0",
+        "gsap": "^3.11.4",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.7.0",
+        "react-dom": "^18.2.0",
+        "react-lorem-ipsum": "1.4.4",
+        "react-scripts": "^2.1.3",
+        "web-vitals": "^3.1.1"
+    },
+    "devDependencies": {
+        "react-router-dom": "^6.7.0",
+        "typescript": "3.3.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
     ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
 }
