--- a/Website_Updates-main/package.json
+++ b/Website_Updates-main/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "aos-animations": "^0.0.7",
     "bootstrap": "^5.2.3",
     "framer-motion": "^8.5.4",
     "google-map-react": "^2.2.0",
